# toy-raft

./: .gitignore  Cargo.toml  MODULE.bazel  README.md
cmd/raftctl/: BUILD.bazel  Cargo.toml
cmd/raftctl/src/: args.rs  cmd.rs  lib.rs  main.rs  status.rs
examples/id-generator/: BUILD.bazel  Cargo.toml
examples/id-generator/src/: main.rs
proto/: BUILD.bazel  operations.proto  raft.proto
toy-raft/: BUILD.bazel  Cargo.toml  build.rs
toy-raft/src/: access_log.rs  actor.rs  config.rs  leader.rs  lib.rs  message.rs  metrics.rs  raft.rs  server.rs  state_machine.rs  vote.rs  writer.rs
toy-raft/src/log/: memory.rs  mod.rs  storage.rs
toy-raft/src/raft/: actor.rs  leader.rs  message.rs  metrics.rs  mod.rs  vote.rs
toy-raft/src/raft/log/: memory.rs  storage.rs
