[package]
name = "toy-raft"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
hyper = "1"
pin-project-lite = "0.2"
http = "1"

[build-dependencies]
tonic-build = "0.12"
anyhow = "1"
