[package]
name = "raftctl"
version = "0.1.0"
edition = "2021"
publish = false
description = "toy-raft cluster management tool"

[[bin]]
name = "raftctl"
path = "src/main.rs"

[lib]
name = "raftctl"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
toy-raft = { path = "../../toy-raft" }
anyhow = "1"
