[package]
name = "id-generator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }

toy-raft = { path = "../../toy-raft" }
