[package]
name = "id-generator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.25"
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"] }
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
prometheus = "0.13"
async-trait = "0.1"

toy-raft = { path = "../../toy-raft" }
